@@ -1,3 +1,13 @@
+2017-04-21  Anders Carlsson  <andersca@apple.com>
+
+        Remove another use of toPaymentAuthorizationStatus
+        https://bugs.webkit.org/show_bug.cgi?id=171114
+
+        Reviewed by Dan Bernstein.
+
+        * Modules/applepay/ApplePaySession.cpp:
+        (WebCore::ApplePaySession::completeShippingContactSelection):
+
 2017-04-21  Alex Christensen  <achristensen@webkit.org>
 
         Reduce copies and allocations in SharedBuffer::append
